<resources>
    <string name="boss_unipay_safeloadding">正在进入安全支付环境</string>
    <string name="boss_unipay_ic_tipsclose">boss_unipay_ic_tipsclose</string>
    <string name="boss_unipay_ic_right">boss_unipay_ic_right</string>
    <string name="boss_unipay_ic_attention">boss_unipay_ic_attention</string>
    <string name="boss_unipay_ic_arrowr">boss_unipay_ic_arrowr</string>
    <string name="boss_unipay_ic_jian">boss_unipay_ic_jian</string>
    <string name="boss_unipay_ic_wrong_s">boss_unipay_ic_wrong_s</string>
    <string name="boss_unipay_service">如果您对该笔交易有任何疑问</string>
    <string name="boss_unipay_service_call">请致电腾讯客服</string>
    <string name="boss_unipay_service_phone">0755-61619966</string>
    <string name="boss_unipay_region">中国+86</string>
    <string name="boss_unipay_qd">Q点</string>
    <string name="boss_unipay_qb">Q币</string>
    <string name="boss_unipay_yuan">元</string>
    <string name="boss_unipay_balance">余额</string>
    <string name="boss_unipay_agreecheck">到期自动续费</string>
    <string name="boss_unipay_ic_select">boss_unipay_ic_select</string>
    <string name="boss_unipay_ic_reduce">boss_unipay_ic_reduce</string>
    <string name="boss_unipay_ic_add">boss_unipay_ic_add</string>
    <string name="boss_unipay_ic_right_toast">boss_unipay_ic_right_toast</string>
    <string name="boss_unipay_ic_warn">boss_unipay_ic_warn</string>
    <string name="boss_unipay_ic_wrong">boss_unipay_ic_wrong</string>
    <string name="boss_unipay_account_balance">账户余额</string>
    <string name="boss_unipay_vercode_error">验证码不能为空</string>
    <string name="boss_unipay_vercode_get">获取验证码</string>
    <string name="boss_unipay_vercode_over">可用验证码数目为0</string>
    <string name="boss_unipay_vercode_afterget">秒后再次获取</string>
    <string name="boss_unipay_vercode_reget">重新获取</string>
    <string name="boss_unipay_vercode_send">验证码已发送至手机</string>
    <string name="boss_unipay_vercode_left">剩余短信为</string>
    <string name="boss_unipay_vercode_unit">条</string>
    <string name="boss_unipay_neterror">网络错误</string>
    <string name="boss_unipay_sendvercode_error">获取短信验证码错误</string>
    <string name="boss_unipay_conume_vercodema">消费验证码</string>
    <string name="boss_unipay_conume_vercode">消费验证</string>
    <string name="boss_unipay_qqpay">QQ卡支付</string>
    <string name="boss_unipay_qpoint">Q点</string>
    <string name="boss_unipay_qcoin">Q币</string>
    <string name="boss_unipay_verify">验证</string>
    <string name="boss_unipay_inputvercode">请输入验证码</string>
    <string name="boss_unipay_qqwallet">QQ钱包</string>
    <string name="boss_unipay_entry_numberNull">参数错误:购买数量错误</string>
    <string name="boss_unipay_entry_numberError">参数错误:购买数量错误</string>
    <string name="boss_unipay_entry_number0">参数错误:购买数量不能为0</string>
    <string name="boss_unipay_entry_offeridNull">参数错误:offerId不能为空</string>
    <string name="boss_unipay_entry_iconNull">参数错误:图标资源不能为空</string>
    <string name="boss_unipay_entry_orderNull">参数错误:订单信息不能为空</string>
    <string name="boss_unipay_str_copy"><u>复制</u></string>
    <string name="boss_unipay_str_more"><u>更换</u></string>
    <string name="boss_unipay_pay_channel">支付方式:</string>
    <string name="boss_unipay_more_channel">更多</string>
    <string name="boss_unipay_title_rate">1元/张</string>
    <string name="boss_unipay_colon">:</string>
    <string name="boss_unipay_multiply"> x </string>
    <string name="boss_unipay_rmb">￥</string>
    <string name="boss_unipay_wait">请稍候…</string>
    <string name="boss_unipay_uin_hint">QQ号码</string>
    <string name="boss_unipay_pwd_hint">QQ密码</string>
    <string name="boss_unipay_cancel">取消</string>
    <string name="boss_unipay_sure">确定</string>
    <string name="boss_unipay_mpsend">赠送</string>
    <string name="boss_unipay_mantext">满</string>
    <string name="boss_unipay_buytext">买</string>
    <string name="boss_unipay_sendtext">送</string>
    <string name="boss_unipay_offertext">赠送</string>
    <string name="boss_unipay_savetext">充值</string>
    <string name="boss_unipay_purchasetext">购买</string>
    <string name="boss_unipay_opentext">开通</string>
    <string name="boss_unipay_updatetext">升级为</string>
    <string name="boss_unipay_continuepaytext">续费</string>
    <string name="boss_unipay_savenum">充值数量</string>
    <string name="boss_unipay_save_rightnow">立即充值</string>
    <string name="boss_unipay_opentime">开通时长</string>
    <string name="boss_unipay_continueopentime">续费时长</string>
    <string name="boss_unipay_open_rightnow">立即开通</string>
    <string name="boss_unipay_continueopen_rightnow">立即续费</string>
    <string name="boss_unipay_buy_rightnow">立即购买</string>
    <string name="boss_unipay_buy_num">购买数量</string>
    <string name="boss_unipay_numlimt">数量不能超过</string>
    <string name="boss_unipay_monthunit">个月</string>
    <string name="boss_unipay_please_inputnum">请输入数额</string>
    <string name="boss_unipay_mcard">手机充值卡支付</string>
    <string name="boss_unipay_mcard_prompt">充值卡只能一次性使用，请选择面值:</string>
    <string name="boss_unipay_succ_save">成功充值</string>
    <string name="boss_unipay_succ_buy">成功购买</string>
    <string name="boss_unipay_succ_open">成功开通</string>
    <string name="boss_unipay_back">返回</string>
    <string name="boss_unipay_continue">继续</string>
    <string name="boss_unipay_continuesave">继续充值</string>
    <string name="boss_unipay_continueopen">继续开通</string>
    <string name="boss_unipay_mcardvalue1">10元</string>
    <string name="boss_unipay_mcardvalue2">20元</string>
    <string name="boss_unipay_mcardvalue3">30元</string>
    <string name="boss_unipay_mcardvalue4">50元</string>
    <string name="boss_unipay_mcardvalue5">100元</string>
    <string name="boss_unipay_mcard_num">充值卡序列号</string>
    <string name="boss_unipay_mcard_pwd">充值卡密码</string>
    <string name="boss_unipay_pay_rightnow">立即支付</string>
    <string name="boss_unipay_pay_next">下一步</string>
    <string name="boss_unipay_pay_text">支付</string>
    <string name="boss_unipay_qd_pay">Q点支付</string>
    <string name="boss_unipay_qb_pay">Q币支付</string>
    <string name="boss_unipay_qd_paysucc">Q点充值成功</string>
    <string name="boss_unipay_qb_paysucc">Q币充值成功</string>
    <string name="boss_unipay_pay_succ">支付成功</string>
    <string name="boss_unipay_unsupportHF">当前金额暂时不支持话费支付</string>
    <string name="boss_unipay_pay_mobilesucctitle">短信已发送</string>
    <string name="boss_unipay_pay_mobilesucc">扣费成功后系统将向本手机下发一条短信,请注意查收！</string>
    <string name="boss_unipay_pay_succbd">支付成功！</string>
    <string name="boss_unipay_pay_error">对不起，支付出错</string>
    <string name="boss_unipay_pay_connect">您可以联系客服中心(0755–61369986)查询</string>
    <string name="boss_unipay_pay_order">订单号：</string>
    <string name="boss_unipay_pay_back">返回</string>
    <string name="boss_unipay_pay_continue">继续购买</string>
    <string name="boss_unipay_pay_search">查询结果</string>
    <string name="boss_unipay_qd_protect">您开通了Q币Q点保护，请输入手机支付密码</string>
    <string name="boss_unipay_qd_pwd">手机支付密码</string>
    <string name="boss_unipay_qcard_pay">QQ卡支付</string>
    <string name="boss_unipay_mobile_pay">手机话费支付</string>
    <string name="boss_unipay_qcard_num">QQ卡卡号</string>
    <string name="boss_unipay_qcard_pwd">QQ卡密码</string>
    <string name="boss_unipay_money_decima">.00</string>
    <string name="boss_unipay_else_num">其它数额</string>
    <string name="boss_unipay_pay_auto">自动续费</string>
    <string name="boss_unipay_pay_money">充值数额</string>
    <string name="boss_unipay_open_num">开通月数</string>
    <string name="boss_unipay_yzm_prompt">输入字符，不区分大小写</string>
    <string name="boss_unipay_yzm_change">看不清，换一张</string>
    <string name="boss_unipay_num">数量</string>
    <string name="boss_unipay_total_price">总价</string>
    <string name="boss_unipay_mcard_succ_tips">注:到账金额取决于手机充值卡实际面值</string>
    <string name="boss_unipay_bank_opened">成功添加银行卡！支付更快更安全</string>
    <string name="boss_unipay_bank_findpwd">您可以登录财付通网站找回支付密码哦</string>
    <string name="boss_unipay_mobile_pay_tips">手机话费支付温馨提示</string>
    <string name="boss_unipay_access">accessicon</string>
    <string name="boss_unipay_channelicon">channelicon</string>
    <string name="boss_unipay_dropicon">dropicon</string>
    <string name="boss_unipay_wavebg">wavebg</string>
    <string name="boss_unipay_resicon">resicon</string>
    <string name="boss_unipay_viplogo">viplogo</string>
    <string name="boss_unipay_dashline">dashline</string>
    <string name="boss_unipay_delbtn">delbtn</string>
    <string name="boss_unipay_closebtn">closebtn</string>
    <string name="boss_unipay_facesuc">facesuc</string>
    <string name="boss_unipay_popicon">popicon</string>
    <string name="boss_unipay_sucpic">sucpic</string>
    <string name="boss_unipay_warnpic">warnpic</string>
    <string name="boss_unipay_wrongpic">wrongpic</string>
    <string name="boss_unipay_writeicon">writeicon</string>
    <string name="boss_unipay_reduceicon">reduceicon</string>
    <string name="boss_unipay_addicon">addicon</string>
    <string name="boss_unipay_codeimg">codeimg</string>
    <string name="boss_unipay_wavbgicon">wavbgicon</string>
    <string name="boss_unipay_tuijianicon">tuijianicon</string>
    <string name="boss_unipay_mobile_please_input_number">请输入本机号码</string>
    <string name="boss_unipay_mobile_number">本机号码</string>
    <string name="boss_unipay_waitpic">waitpic</string>
    <string name="boss_unipay_game_mpay_tel">0755-61619966</string>
    <string name="boss_unipay_notgame_mpay_tel">0755-61369988</string>
    <string name="boss_unipay_smallbank">smallbank</string>
    <string name="boss_unipay_tenpay_yz_phone_text">验证码已发送至手机%s。</string>
    <string name="boss_unipay_tenpay_yz_cftphone_text">验证码已发送至手机%s。</string>
    <string name="boss_unipay_tenpay_network_error">连接网络失败</string>
    <string name="boss_unipay_tenpay_network_ssl_error">网络签名验证出错，请检查设备时间是否正确</string>
    <string name="boss_unipay_tenpay_http_check_network_wifi">请检查是否正确登录wifi</string>
    <string name="boss_unipay_tenpay_utils_unknown_error">发生未知错误</string>
    <string name="boss_unipay_tenpay_init_progress">请稍候...</string>
    <string name="boss_unipay_tenpay_ok">确定</string>
    <string name="boss_unipay_tenpay_cft_account_name">财付通(余额</string>
    <string name="boss_unipay_tenpay_yuan">元</string>
    <string name="boss_unipay_tenpay_pay">立即支付</string>
    <string name="boss_unipay_tenpay_forget_pass"><U>忘记密码?点此支付</U></string>
    <string name="boss_unipay_tenpay_thru">有效期(月份/年份)</string>
    <string name="boss_unipay_tenpay_sign">卡背面末3位数</string>
    <string name="boss_unipay_tenpay_set_newthru">更新有效期</string>
    <string name="boss_unipay_tenpay_nopwdnosms">本次交易免验证，点击直接付款。</string>
    <string name="boss_unipay_tenpay_sms_add">为了本次交易安全，需要短信验证。</string>
    <string name="com_tencent_open_appstore_dialog_tips">提示</string>
    <string name="com_tencent_open_appstore_dialog_confirm_text">是否确认退出游戏？</string>
    <string name="com_tencent_open_appstore_dialog_create_icon">创建游戏桌面图标</string>
    <string name="video_closemic">静音</string>
    <string name="video_closecamera">关摄像头</string>
    <string name="video_hang_up">结束</string>
    <string name="video_cancel_acc_txt">取消视频请求 按钮</string>
    <string name="video_switch_to_back_camera_acc_txt">正在使用前置摄像头，切至后置摄像头</string>
    <string name="video_close_mic_acc_txt">关闭麦克风 按钮</string>
    <string name="video_close_camera_acc_txt">关闭我的摄像头 按钮</string>
    <string name="video_close_acc_txt">结束视频通话 按钮</string>
    <string name="qav_call_phonenum">拨打手机号码</string>
    <string name="qav_call_phonenum_acct">拨打手机号码 按钮</string>
    <string name="qav_audio_suit">对方网络良好</string>
    <string name="qb_tenpay_please_input_password">财付通支付密码</string>
    <string name="qb_tenpay_resend_text">重新获取</string>
    <string name="qb_tenpay_done">完成</string>
    <string name="qb_tenpay_foget_pwd_paycard">忘记密码？使用银行卡支付</string>
    <string name="qb_tenpay_msg_code">短信验证码</string>
    <string name="qb_tenpay_confirm">确定</string>
    <string name="qb_tenpay_change">更换</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
</resources>