<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View style="@style/qb_tenpay_line" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="8.0dip">
        <TextView android:id="@id/yz_add" android:paddingLeft="7.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/boss_unipay_tenpay_sms_add" android:singleLine="true" style="@style/qb_tenpay_dialog_text.dark" />
        <TextView android:id="@id/yz_phone" android:paddingLeft="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/qb_tenpay_dialog_text.dark" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/qb_tenpay_dialog_input_bg" android:layout_width="fill_parent" android:layout_height="@dimen/qb_tenpay_editor_height" android:layout_marginLeft="8.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="8.0dip">
        <com.tenpay.tenpayplugin.view.ClearableEditText android:id="@id/yz_code" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/qb_tenpay_msg_code" android:maxLength="6" android:layout_weight="1.0" android:inputType="number" android:imeOptions="actionDone" android:imeActionLabel="@string/qb_tenpay_done" style="@style/qb_tenpay_dialog_edittext" />
        <View style="@style/qb_tenpay_v_line" />
        <Button android:id="@id/yz_resend" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/qb_tenpay_resend_text" style="@style/qb_tenpay_link_blue" />
    </LinearLayout>
    <Button android:id="@id/yz_confirm" android:layout_marginLeft="8.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/qb_tenpay_confirm" style="@style/qb_tenpay_btn_submit" />
</LinearLayout>
