<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textColor="@color/qav_white" android:id="@id/qav_start_station" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="14.0sp" android:textColor="@color/qav_white" android:gravity="center" android:id="@id/start_audio_tip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/qav_audio_suit" android:layout_below="@id/qav_start_station" android:layout_centerHorizontal="true" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:layout_alignParentBottom="true">
        <Button android:textSize="16.0sp" android:textColor="@color/qav_black" android:id="@id/qav_callphone" android:background="@drawable/qav_audio_btn_white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/qav_call_phonenum" android:layout_alignParentBottom="true" android:onClick="BtnOnClick" android:contentDescription="@string/qav_call_phonenum_acct" />
        <com.tencent.av.activity.ImageTextButton android:icon="@drawable/qav_video_btn_icon_hangup" android:textSize="14.0sp" android:textColor="@color/qav_white" android:orientation="vertical" android:id="@id/qav_start_cancel" android:background="@drawable/qav_audio_btn_red" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip" android:spacing="15.0dip" android:text="@string/video_hang_up" android:layout_above="@id/qav_callphone" android:layout_alignWithParentIfMissing="true" android:onClick="BtnOnClick" android:contentDescription="@string/video_cancel_acc_txt" />
    </RelativeLayout>
</RelativeLayout>
