<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_vertical" android:background="@drawable/qapp_center_selector_h5view_dialog_bg" android:layout_width="290.0dip" android:layout_height="190.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="19.0sp" android:textColor="#ff333333" android:gravity="center_horizontal" android:id="@id/dialog_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="10.0dip" android:text="@string/com_tencent_open_appstore_dialog_tips" android:layout_alignParentTop="true" />
    <TextView android:textSize="15.0sp" android:textColor="#ff535353" android:gravity="left" android:id="@id/dialog_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/com_tencent_open_appstore_dialog_confirm_text" android:layout_below="@id/dialog_title" />
    <CheckBox android:textSize="15.0sp" android:textColor="#ff535353" android:id="@id/dialog_addicon_check" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:checked="false" android:button="@null" android:text="@string/com_tencent_open_appstore_dialog_create_icon" android:drawableLeft="@drawable/qapp_center_selector_h5view_dialog_check" android:drawablePadding="4.0dip" android:layout_below="@id/dialog_content" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/dialog_addicon_check">
        <Button android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/dialog_cancel_btn" android:background="@drawable/qapp_center_selector_h5view_dialog_btn" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:text="@string/cancel" />
        <Button android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/dialog_confirm_btn" android:background="@drawable/qapp_center_selector_h5view_dialog_btn" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="@string/confirm" />
    </LinearLayout>
</RelativeLayout>
