<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="8.0dip" android:paddingTop="10.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/qb_tenpay_dialog_input_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="7.0dip" android:paddingRight="7.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/qb_tenpay_editor_height">
            <TextView android:textSize="16.0sp" android:textColor="@color/qb_tenpay_dark_color" android:gravity="center_vertical" android:id="@id/kuai_bank_name" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@null" android:singleLine="true" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:gravity="right|center" android:id="@id/kuai_more" android:layout_width="40.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/qb_tenpay_change" style="@style/qb_tenpay_link_blue" />
        </LinearLayout>
        <View style="@style/qb_tenpay_line" />
        <com.tenpay.tenpayplugin.view.ClearableEditText android:id="@id/kuai_pass" android:hint="@string/qb_tenpay_please_input_password" android:maxLength="16" android:inputType="textPassword" style="@style/qb_tenpay_dialog_edittext" />
        <com.tenpay.tenpayplugin.view.SixPasswdDialogEditText android:id="@id/kuai_pass_six" android:visibility="visible" android:imeOptions="actionDone" android:imeActionLabel="@string/qb_tenpay_done" style="@style/qb_tenpay_dialog_edittext" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/kuai_forget_pass" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/boss_unipay_tenpay_forget_pass" style="@style/qb_tenpay_link_blue" />
        <LinearLayout android:gravity="center" android:id="@id/kuai_nopwdnosms" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/qb_tenpay_dunpai" />
            <TextView android:textSize="14.0dip" android:textColor="@color/qb_tenpay_thin_color" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/boss_unipay_tenpay_nopwdnosms" android:singleLine="true" />
        </LinearLayout>
        <Button android:id="@id/kuai_confirm" android:layout_marginTop="10.0dip" android:layout_marginBottom="8.0dip" android:text="@string/boss_unipay_tenpay_pay" style="@style/qb_tenpay_btn_submit" />
    </LinearLayout>
</LinearLayout>
