<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/sharp_video_chatting_top_toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_alignParentTop="true">
        <TextView android:textSize="22.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/sharp_clock" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="00:00" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="BtnOnClick" />
        <ImageButton android:id="@id/sharp_switch_camera" android:background="@drawable/qav_audio_btn_white" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/qav_video_change_camera" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="BtnOnClick" android:contentDescription="@string/video_switch_to_back_camera_acc_txt" />
    </RelativeLayout>
    <TextView android:textSize="22.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/sharp_audio_clock" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="00:00" android:layout_below="@id/sharp_video_chatting_top_toolbar" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/sharp_video_chatting_bottom_toolbar" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <com.tencent.av.activity.ImageTextButton android:icon="@drawable/qav_video_btn_icon_cameraoff" android:textSize="14.0sp" android:textColor="@color/qav_black" android:orientation="vertical" android:id="@id/sharp_camera" android:background="@drawable/qav_audio_btn_white" android:layout_width="62.0dip" android:layout_height="fill_parent" android:spacing="14.0dip" android:text="@string/video_closecamera" android:layout_alignParentLeft="true" android:onClick="BtnOnClick" android:contentDescription="@string/video_close_camera_acc_txt" />
        <com.tencent.av.activity.ImageTextButton android:icon="@drawable/qav_video_btn_icon_voiceoff" android:textSize="14.0sp" android:textColor="@color/qav_black" android:orientation="vertical" android:id="@id/sharp_mic" android:background="@drawable/qav_audio_btn_white" android:layout_width="62.0dip" android:layout_height="fill_parent" android:spacing="15.0dip" android:text="@string/video_closemic" android:layout_alignParentRight="true" android:onClick="BtnOnClick" android:contentDescription="@string/video_close_mic_acc_txt" />
        <com.tencent.av.activity.ImageTextButton android:icon="@drawable/qav_video_btn_icon_hangup" android:textSize="14.0sp" android:textColor="@color/qav_white" android:orientation="vertical" android:id="@id/sharp_hangup" android:background="@drawable/qav_audio_btn_red" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:spacing="15.0dip" android:text="@string/video_hang_up" android:layout_toLeftOf="@id/sharp_mic" android:layout_toRightOf="@id/sharp_camera" android:onClick="BtnOnClick" android:contentDescription="@string/video_close_acc_txt" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/sharp_infos" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:onClick="BtnOnClick">
        <TextView android:textSize="12.0sp" android:textColor="@color/qav_white" android:id="@id/info1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" />
    </LinearLayout>
</RelativeLayout>
