<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textColor="@color/qav_white" android:id="@id/qav_audio_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/qav_audio_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:id="@id/qav_audio_img" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_centerHorizontal="true" />
        <TextView android:textSize="20.0sp" android:textColor="@color/qav_white" android:ellipsize="end" android:id="@id/qav_audio_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="27.0dip" android:layout_marginRight="10.0dip" android:singleLine="true" android:layout_below="@id/qav_audio_img" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/qav_white" android:id="@id/qav_audio_tip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_below="@id/qav_audio_info" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/qav_audio_chatting_bottom_toolbar" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <com.tencent.av.activity.ImageTextButton android:icon="@drawable/qav_video_btn_icon_cameraoff" android:textSize="14.0sp" android:textColor="@color/qav_black" android:orientation="vertical" android:id="@id/qav_audio_handfree" android:background="@drawable/qav_audio_btn_white" android:layout_width="62.0dip" android:layout_height="fill_parent" android:layout_marginBottom="10.0dip" android:spacing="14.0dip" android:text="@string/video_closecamera" android:layout_alignParentLeft="true" android:onClick="BtnOnClick" android:contentDescription="@string/video_close_camera_acc_txt" />
        <com.tencent.av.activity.ImageTextButton android:icon="@drawable/qav_video_btn_icon_voiceoff" android:textSize="14.0sp" android:textColor="@color/qav_black" android:orientation="vertical" android:id="@id/qav_audio_mic" android:background="@drawable/qav_audio_btn_white" android:layout_width="62.0dip" android:layout_height="fill_parent" android:layout_marginBottom="10.0dip" android:spacing="15.0dip" android:text="@string/video_closemic" android:layout_alignParentRight="true" android:onClick="BtnOnClick" android:contentDescription="@string/video_close_mic_acc_txt" />
        <com.tencent.av.activity.ImageTextButton android:icon="@drawable/qav_video_btn_icon_hangup" android:textSize="14.0sp" android:textColor="@color/qav_white" android:orientation="vertical" android:id="@id/qav_audio_hangup" android:background="@drawable/qav_audio_btn_red" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="10.0dip" android:spacing="15.0dip" android:text="@string/video_hang_up" android:layout_toLeftOf="@id/qav_audio_mic" android:layout_toRightOf="@id/qav_audio_handfree" android:onClick="BtnOnClick" android:contentDescription="@string/video_close_acc_txt" />
    </RelativeLayout>
</RelativeLayout>
