<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/qb_tenpay_pagebg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:paddingTop="36.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/boss_unipay_tenpay_set_newthru" style="@style/qb_tenpay_dialog_text.dark" />
                <TextView android:id="@id/reset_credit_card" android:paddingTop="36.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/qb_tenpay_dialog_text.dark" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/qb_tenpay_border" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="35.0dip">
                <com.tenpay.tenpayplugin.view.ValidDateEdit android:id="@id/reset_credit_thru" android:layout_width="0.0dip" android:hint="@string/boss_unipay_tenpay_thru" android:maxLength="5" android:layout_weight="1.0" android:inputType="number" style="@style/qb_tenpay_text" />
                <com.tenpay.tenpayplugin.view.TenpayEditText android:id="@id/reset_credit_cvv" android:visibility="gone" android:layout_width="0.0dip" android:hint="@string/boss_unipay_tenpay_sign" android:maxLength="3" android:layout_weight="1.0" android:inputType="number" style="@style/qb_tenpay_text" />
            </LinearLayout>
            <Button android:id="@id/reset_thru_confirm" android:layout_marginTop="34.0dip" android:text="@string/boss_unipay_tenpay_ok" style="@style/qb_tenpay_btn_submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
